# exam-review-agent

./: .gitignore  PRODUCT.md  README.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06c68121755a_init.py  20260703_0001_memory_system.py
backend/app/: main.py
backend/app/agents/: quiz_agent.py  rag_agent.py  tracker_agent.py
backend/app/api/: chat.py  conversations.py  materials.py  memory.py  quiz.py  review.py
backend/app/core/: auth.py  config.py  exceptions.py  middleware.py  store.py
backend/app/db/: __init__.py  database.py  models.py  vector_store.py
backend/app/orchestrator/: __init__.py  graph.py  router.py  state.py
backend/app/schemas/: __init__.py  chat.py  common.py  conversations.py  materials.py  memory.py  quiz.py  review.py
backend/app/services/: __init__.py  chunking_service.py  embedding_service.py  llm_service.py  memory_service.py  parser_service.py  retrieval_service.py  ssl_certificates.py
backend/app/specialists/: mistake_summarizer.py  paper_analyzer.py  quiz_generator.py
backend/app/tasks/: parse_material.py  worker.py
backend/tests/: conftest.py  test_chunking_service.py  test_database_config.py  test_db_models.py  test_embedding_service.py  test_health.py  test_llm_service.py  test_middleware.py  test_orchestrator.py  test_parser_service.py  test_quiz_agent.py  test_rag_agent.py  test_retrieval_service.py  test_tracker_agent.py
backend/tests/test_api/: test_chat.py  test_conversations.py  test_materials.py  test_memory.py  test_quiz.py  (+2 more)
(+134 files in other folders)
